
! KGySoft.Drawing namespace
===========================
! GraphicsPathExtensions class:
  ! New ToGraphicsPath method:
    ! Instead of returning a path with flattened points, now it preserves the original curves as much as possible.
    - Single-point segments are now preserved even if they are the only segment in a figure.

+ KGySoft.Drawing.Imaging namespace
===================================
+ New ReadWriteBitmapDataExtensions class:
  + New [Begin]DrawText[Async]/EndDrawText methods: To draw a text using a GDI+ Font and StringFormat into an
    IReadWriteBitmapData instance.
  + New [Begin]DrawTextOutline[Async]/EndDrawTextOutline methods: To draw the outline of a text using a GDI+ Font
    and StringFormat into an IReadWriteBitmapData instance.


~~~~~~~~~
! v9.2.0:
~~~~~~~~~

- Common changes
================
- Referencing KGySoft.Drawing.Core v9.1.1, which contains minor bug fixes. It indirectly fixes some issues in this
  library, for example ImageExtensions.ToGrayscale made the background of an alpha image black since v9.0.0.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt

! KGySoft.Drawing namespace
===========================
! Icons class:
  ! SystemInformation/SystemQuestion/SystemWarning/SystemError/SystemApplication properties: Up to now the returned
    icons contained exactly two images, whose sizes depended on the DPI of the primary display. From now on the
    returned icons contain all images the icons actually have. To get an icon exactly with a specific size, you can
    use the new Resize extension method.
  ! FromFile(string) method:
    ! From now on it throws an exception if the file does not exist.
    ! The returned icons contain not just up to two images but all images the icon resources actually have.
  + New FromFile(string, int) overload to retrieve an icon of the specified integer identifier from a file.